tolta date{...} dai docc. e migliorati elenchi num.

--- a/Interni/Studio_di_fattibilita/Studio_di_fattibilita_1_0_0.tex
+++ b/Interni/Studio_di_fattibilita/Studio_di_fattibilita_1_0_0.tex
@@ -10,7 +10,6 @@
 \uso{interno}
 \dest{\ALL}
 \title{Studio di Fattibilità}
-% \date{9 gennaio 2017}
 
 \begin{document}
 \maketitle
@@ -18,6 +17,12 @@
 \tableofcontents
 
 
+
+
+
+%%%%%%%%%%%%%%%%
+%%  Introduzione
+%%%%%%%%%%%%%%%%
 
 \section{Introduzione}
 	\subsection{Scopo del documento}
@@ -54,6 +59,12 @@
 
 
 	
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%  Studio di fattibilità del capitolato scelto
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section{Studio di fattibilità del capitolato scelto}
 	\subsection{\proj: editor di diagrammi UML con generazione di codice}
 		\subsubsection{Descrizione}
@@ -98,7 +109,13 @@
 		dell'architettura software, hanno suscitato un elevato grado di interesse da parte dei membri del gruppo. Quest'ultimo, combinato con un insieme non 
 		trascurabile di aspetti positivi, ha fatto sì che il gruppo \hx{} scegliesse tale capitolato d'appalto.
 	
-\newpage
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%  Studio di fattibilità degli altri capitolati
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Studio di fattibilità degli altri capitolati}
 	\subsection{Capitolato C1: \emph{APIM}: An API Market Platform}
