--- a/Interni/Verbali/VI_17-02-08.tex
+++ b/Interni/Verbali/VI_17-02-08.tex
@@ -1,5 +1,5 @@
-% Riunione interna del 2 gennaio 2017
-% da compilare con il comando pdflatex Esterni/Verbali/VI_17-01-02.tex
+% Riunione interna del 8 febbraio 2017
+% da compilare con il comando pdflatex Esterni/Verbali/VI_17-02-08.tex
 
 \input{../../util/hx-ambiente}
 
@@ -10,7 +10,6 @@
 \uso{interno}
 \dest{\ALL}
 \title{Riunione interna del 8 febbraio 2017}
-% \date{9 gennaio 2017}
 
 \begin{document}
 
