redatto verbale 20 marzo con il prof.

--- a/Esterni/Verbali/VE_17-01-10.tex
+++ b/Esterni/Verbali/VE_17-01-10.tex
@@ -26,7 +26,7 @@
 
 Decisioni prese:
 \begin{enumerate}
-	\item Abbiamo presentato al \GP un breve esempio d'uso del sistema; in tale esempio, un utente crea un nuovo progetto con la nostra applicazione e si interfaccia con il \gloss{diagramma delle classi} e il \gloss{diagramma delle attività}. L'esempio d'uso illustrato al \GP è disponibile nell'appendice A del documento \AdR.
+	\item \textbf{esempio d'uso} --- Abbiamo presentato al \GP un breve esempio d'uso del sistema; in tale esempio, un utente crea un nuovo progetto con la nostra applicazione e si interfaccia con il \gloss{diagramma delle classi} e il \gloss{diagramma delle attività}. L'esempio d'uso illustrato al \GP è disponibile nell'appendice A del documento \AdR.
 \end{enumerate}
 
 \end{document}
